# pysmali

./: pyproject.toml
smali/: __init__.py  block.py  smali_file.py  statements.py  tokens.py
smali/tests/: test_smali_file.py
